Refactor: DTO deduplication, CommonLibrary integration and fail-fast compliance